--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yantramanav&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -10,6 +11,11 @@
 :root {
   --blue-rgb: 237 245 255;
   --green-rgb: 125 161 35;
+  --bbg: #303030;
+  --bf: #5E5E5E;
+  --bt: #EEEEEE;
+  --btl: #C6C6C6;
+  --bsh: #919191;
 }
 
 body {
@@ -354,6 +360,139 @@ body .crypto-page {
   flex-direction: row;
   overflow-x: auto;
 }
+/* BUGTRAG */
+body .bug-main-container{
+  font-family: 'Yantramanav', sans-serif;
+}
+.bug-nav{
+  font-family: Yantramanav;
+}
+.bug-main-container{
+  width: 100%;
+  margin: auto;
+  padding: 5% 5px 5px 5px;
+  background: var(--bbg);
+  color: var(--bt);
+}
+.info-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.data-container {
+  border: 1px solid var(--bf);
+  border-radius: 5px;
+  max-width: 200px;
+  max-height: 210px;
+  overflow: hidden;
+}
+.tab {
+  cursor: pointer;
+  padding: 5px;
+  margin: 5px 5px 5px 5px;
+  transition: 0.5s;
+}
+.tab:hover{
+  background-color: var(--bf);
+}
+.active-tab{
+  background-color: var(--bf);
+}
+.tab-content{
+  width: 95%;
+  margin: 0px 5px 5px 0;
+  padding: 0px;
+  background: var(--bbg);
+}
+.ticket-container{
+  margin: 4px;
+  margin-left: 10px;
+  padding: 5px 10px 5px 10px;
+  background-color: var(--bf);
+  border-radius: 5px;
+  line-height: 1.2;
+}
+.bug-btn{
+  background-color: var(--bf);
+  border-radius: 1px;
+  transition: 0.2s;
+  margin: 2px;
+  padding: 5px;
+  margin-top: 5px;
+}
+.bug-btn:hover{
+  background-color: var(--bt);
+  color: var(--bbg);
+}
+/* bug creation */
+.select{
+  width: 95%;
+  color: var(--bt);
+  background-color: var(--bbg);
+  padding: 4px;
+  border: 1px solid var(--bsh);
+  border-radius: 5px;
+  margin: 5px;
+}
+.text-area{
+  width: 95%;
+  background-color: var(--bbg);
+  padding: 4px;
+  border: 1px solid var(--bsh);
+  border-radius: 5px;
+  margin: 5px;
+}
+.infoBox {
+  position: fixed;
+  top: 8%;
+  right: 0;
+  height: 100vh;
+  width: 200px;
+  padding: 4px;
+  background-color: var(--bf);
+  color: var(--bt);
+  transition: right 1s ease;
+  z-index: 9;
+}
+.infoBoxHidden {
+  position: fixed;
+  right: -100%;
+  transition: right 1s ease;
+}
+
+.infoBoxBtn {
+  position: fixed;
+  top: 5%;
+  right: 0;
+  z-index: 10;
+  color: var(--bt);
+}
+.infoBoxBtnHidden {
+  position: fixed;
+  top: 5%;
+  right: 0;
+  z-index: 10;
+  color: var(--bt);
+}
+
+
+
+@layer utilities {
+  .info-container{
+    @apply flex flex-row items-start justify-between;
+  }
+  .data-container {
+    @apply m-2 p-3;
+  }
+  
+}
+  /* --bbg: #303030;
+  --bf: #5E5E5E;
+  --bt: #EEEEEE;
+  --btl: #C6C6C6;
+  --bsh: #919191; */
+
 
 @media screen and (max-width: 768px){
   .news-block{
