--- a/src/index.css
+++ b/src/index.css
@@ -363,14 +363,17 @@ body .crypto-page {
 /* BUGTRAG */
 body .bug-main-container{
   font-family: 'Yantramanav', sans-serif;
+  /* background-color: #110f1f; */
 }
 .bug-nav{
   font-family: Yantramanav;
 }
 .bug-main-container{
   width: 100%;
-  margin: auto;
-  padding: 5% 5px 5px 5px;
+  /* height: 100%;  */
+  /* margin: auto; */
+  position: absolute;
+  padding: 15vh 5px 5px 5px;
   background: var(--bbg);
   color: var(--bt);
 }
@@ -384,13 +387,15 @@ body .bug-main-container{
   border: 1px solid var(--bf);
   border-radius: 5px;
   max-width: 200px;
-  max-height: 210px;
-  overflow: hidden;
+  max-height: 310px;
+  min-width: none;
+  min-height: 310px;
+  overflow: auto;
 }
 .tab {
   cursor: pointer;
   padding: 5px;
-  margin: 5px 5px 5px 5px;
+  margin: 5px 5px 5px 0px;
   transition: 0.5s;
 }
 .tab:hover{
@@ -400,24 +405,28 @@ body .bug-main-container{
   background-color: var(--bf);
 }
 .tab-content{
-  width: 95%;
-  margin: 0px 5px 5px 0;
   padding: 0px;
   background: var(--bbg);
 }
 .ticket-container{
-  margin: 4px;
+  margin: 0px 5px 5px 0px;
   margin-left: 10px;
   padding: 5px 10px 5px 10px;
   background-color: var(--bf);
-  border-radius: 5px;
+  border-radius: 1px;
   line-height: 1.2;
+  transition: 0.2s;
+  border: solid 1px var(--bf);
+
+}
+.ticket-container:hover{
+  border: solid 1px var(--bsh);
 }
 .bug-btn{
   background-color: var(--bf);
   border-radius: 1px;
   transition: 0.2s;
-  margin: 2px;
+  /* margin: 2px; */
   padding: 5px;
   margin-top: 5px;
 }
@@ -433,15 +442,34 @@ body .bug-main-container{
   padding: 4px;
   border: 1px solid var(--bsh);
   border-radius: 5px;
+  margin: 5px 0 5px 0;
+}
+.done{
+  background-color: rgb(41, 147, 41);
+}
+.inprogress{
+  background-color: rgb(59, 53, 130);
+}
+.todo{
+  background-color: var(#919191);
+}
+.released{
+  background-color: rgb(52, 102, 53);
+}
+.select-status{
+  width: 95%;
+  color: var(--bt);
+  /* background-color: var(--bbg); */
+  padding: 2px;
+  border-radius: 5px;
   margin: 5px;
 }
 .text-area{
-  width: 95%;
   background-color: var(--bbg);
   padding: 4px;
   border: 1px solid var(--bsh);
   border-radius: 5px;
-  margin: 5px;
+  margin: 5px 0 5px 0;
 }
 .infoBox {
   position: fixed;
@@ -475,9 +503,66 @@ body .bug-main-container{
   z-index: 10;
   color: var(--bt);
 }
+.comment-section{
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  background-color: var(--bbg);
+}
+.comment-sender{
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  background-color: var(--bbg);
+}
+.delete_icon:hover{
+  cursor: pointer;
+}
+.bug_header{
+  background-color: var(--bbg);
+  position: fixed;
+}
+table tr, th{
+  background-color: var(--bbg);
+  color: var(--bt);
+  border: none;
+}
+table th{
+  padding: 10px;
+  font-size: 4vh;
+  padding: 15px 0 15px 0;
+  width: 25em;
+  border-bottom: 1px solid var(--bsh);
+}
+table th:hover{
+  border-bottom: 1px solid var(--bt);
+}
+tbody td {
+  padding: 5px;
+  border-left: 1px solid var(--bsh);
+}
+tbody td:hover {
+  border-left: 1px solid var(--bt);
+}
+tbody td {
+  padding: 5px;
+  border-left: 1px solid var(--bsh);
+}
+.ql-container {
+  border: 1px solid var(--bbg);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: var(--bt);
+}
+.ql-container::before {
+  color: var(--bsh);
+}
 
-
-
+.ql-toolbar {
+  border-left: 1px solid var(--bbg);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 5px;
+}
 @layer utilities {
   .info-container{
     @apply flex flex-row items-start justify-between;
@@ -485,7 +570,11 @@ body .bug-main-container{
   .data-container {
     @apply m-2 p-3;
   }
-  
+  body{
+  }
+  .bug_header {
+    @apply flex justify-between items-center sm:px-16 py-4 max-w-[100%] absolute top-0 z-10 right-0 left-0;
+  }
 }
   /* --bbg: #303030;
   --bf: #5E5E5E;
