--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,11 @@
 
 body {
   font-family: "Work Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--green-rgb);
 }
 
-body:has(.card[data-color="blue"]:hover) {
-  background-color: rgb(var(--blue-rgb) / 25%);
-}
 
 body:has(.card[data-color="green"]:hover) {
   background-color: rgb(var(--green-rgb) / 25%);
@@ -262,7 +262,8 @@ body:has(.card[data-color="green"]:hover) {
   background-color: rgba(136, 216, 176, 0.1);
   transition: all 0.5s ease;
   gap: 16px;
-  border-radius: 16px;
+  border-radius: 5px;
+  box-shadow: 0 2px 2px 0px rgb(220, 220, 220);
 }
 .project_layer.expanded .hidden-pictures {
   display: block;
@@ -282,20 +283,7 @@ body:has(.card[data-color="green"]:hover) {
   display: block;
   transition: all 0.5 ease;
 }
-@media (max-width: 767px) {
-  .project_layer {
-    padding: 5px;
-    margin: 3px 2px 10px -20px;
-    width: 70%;
-  }
-}
-@media (max-width: 400px) {
-  .project_layer {
-    padding: 5px;
-    margin: 5px 0px 10px -20px;
-    width: 120%;
-  }
-}
+
 
 /* testing css */
 
@@ -370,17 +358,21 @@ body .crypto-page {
     width: 90%;
     margin: auto;
   }
-  th{
+  .crypto-th{
     background-color: #CCCCCC;
-    border: 1px solid #BBBBBB;
+    /* border: 1px solid #BBBBBB; */
     color: #F28500;
     font-weight: bold;
     font-size: 18px;
     text-align: left;
   }
-  tr {
+  .crypto-tr {
     background-color: #DDDDDD;
     border: 1px solid #BBBBBB;
+    color: #F28500;
+  }
+  .crypto-td{
+    color: #F28500;
   }
 
   /* Crypto News */
@@ -424,15 +416,12 @@ body .crypto-page {
 /* BUGTRAG */
 body .bug-main-container{
   font-family: 'Yantramanav', sans-serif;
-  /* background-color: #110f1f; */
 }
 .bug-nav{
   font-family: Yantramanav;
 }
 .bug-main-container{
   width: 100%;
-  /* height: 100%;  */
-  /* margin: auto; */
   position: absolute;
   padding: 15vh 5px 5px 5px;
   background: var(--bbg);
@@ -679,7 +668,7 @@ tbody td {
 
 @media screen and (max-width: 768px){
   .news-block{
-    width: 150px;
+    width: 300px;
   }
   .parent-container-news{
     display: flex;
@@ -701,5 +690,70 @@ tbody td {
   .nft-box:hover {
     width: 100%;
     background-color: #ffffff;
+  }
+}
+
+@media (max-width: 300px) {
+  .project_layer {
+    padding: 10px 20px 10px 20px;
+    width: 110%;
+    margin: 10px 0px 0px -50px;
+    font-size: 15px;
+    line-height: 19px;
+  }
+  .header_links {
+    font-size: 14px;
+    margin-top: -10px;
+    margin-right: 80px;
+  }
+  .header {
+    font-size: 12px;
+  }
+  .md_cube{
+    width: 30px;
+    height: 30px;
+    margin-left: -15px;
+  }
+}
+
+@media (max-width: 400px) {
+  .project_layer {
+    padding: 10px 20px 10px 20px;
+    width: 22rem;
+    margin: 10px 0px 0px -50px;
+    font-size: 15px;
+    line-height: 19px;
+  }
+  /* .image_slider {
+    width: 100%;
+    height: 30vh;
+  } */
+}
+@media (max-width: 767px) {
+  .project_layer {
+    margin: 3px 2px 10px -20px;
+    width: 110%;
+  }
+  
+  
+}
+@media (max-width: 1028px) {
+  /* .image_slider {
+    width: 100%;
+    height: 30em;
+  } */
+  
+}
+@media (min-width: 1028px) {
+  /* .image_slider {
+    width: 100%;
+    height: 100vh;
+  } */
+  .project_layer {
+    padding: 10px 20px 10px 20px;
+    width: 100%;
+    margin: 3% 0px 0px 0px;
+    font-size: 16px;
+    line-height: 24px;
   }
 }
