--- a/src/index.css
+++ b/src/index.css
@@ -759,3 +759,30 @@ tbody td {
     line-height: 24px;
   }
 }
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  } 
+}
+@keyframes slideUp {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(-100%);
+    opacity: 1;
+  } 
+}
+.animate-slide-down {
+  animation: slideDown 0.5s ease-out forwards;
+}
+.animate-slide-up{
+  animation: slideUp 0.5s ease-out forwards;
+}
