--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,7 @@ body:has(.card[data-color="green"]:hover) {
   transform-origin: bottom right;
   transform: rotateZ(15deg);
   will-change: transform;
-  box-shadow: 16px 0 40px #e4e4e4;
+  box-shadow: 16px 0 40px #321540;
 }
 
 .block-container .btn-back-red {
@@ -220,7 +220,8 @@ body:has(.card[data-color="green"]:hover) {
   z-index: 1;
   width: inherit;
   height: inherit;
-  background-color: #ffffff33;
+  background-color: #f8c5f135;
+  background-image: linear-gradient(180deg, #f8c5f135, rgba(38, 15, 36, 0.876));
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   transition: 250ms;
